			   XPCE ChangeLog
			   ==============

* FIXED: Better consistency check before calling XSetInputFocus(), sometimes
  killing process.  Not sure it helps :-(

VERSION 6.5.23, distributed with SWI-Prolog 5.5.23
==================================================

* ADDED: display<-win_directory to exploit the standard Windows Shell
  directory dialog.

* ENHANCED: Win32: update GetSysColor() defined colours (name win_*).
  Steve Moyle.

* FIXED: pcePP() to return UTF-8 encoded strings if there is Unicode data
  in it.

* FIXED: prolog_term<-print_name (encoding issue).


VERSION 6.5.21, distributed with SWI-Prolog 5.5.21
==================================================

* FIXED: Bug#66: filename handling for names holding extended ISO Latin 1
  (128..256) characters.  Jiri Spitz.

* ADDED: Allow (re-)definition of ->_draw_postscript from Prolog.  See
  documentation in `graphical->_draw_postscript'.

* FIXED: handling arrows on class arc.  MPWH.

* FIXED: Bug#62: define class whose name is already used as a type causes
  a crash.  Holger Kanwischer.


VERSION 6.5.20, distributed with SWI-Prolog 5.5.20
==================================================

* FIXED: Flickering pullright when dragging over pullright arrow.
  Jochem Liem.

* FIXED: Open pullright if there is no message on an item and the button
  is released.  Jochem Liem.

* FIXED: Unicode support in Windows metafile filename and comment handling.

* FIXED: Bug#48: Error handling in date->advance.  Dmitry.

* FIXED: Bug#57: menu<-modified.  Holger Kanwischer.

* FIXED: Bug#52: file->backup when using national characters.  Jiri Spitz.


VERSION 6.5.19, distributed with SWI-Prolog 5.5.19
==================================================

* ADDED: Working on XIM support.  Current primitive version deals with
  dead-keys and with wide characters in a portable manner.


VERSION 6.5.18, distributed with SWI-Prolog 5.5.18
==================================================
